--- a/package.json
+++ b/package.json
@@ -3,20 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@material-ui/private-theming": "^5.0.0-alpha.33",
+    "@material-ui/utils": "^4.11.3",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.7",
     "@sentry/react": "^7.34.0",
     "@sentry/tracing": "^7.34.0",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tanstack/react-query": "^4.24.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
+    "@types/jquery": "^3.5.16",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
+    "@types/react-burger-menu": "^2.8.3",
+    "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "^18.0.0",
+    "date-fns": "^2.29.3",
+    "dayjs": "^1.11.7",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-burger-menu": "^3.0.9",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-responsive-calendar-picker": "^1.2.9",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.3.2",
+    "redux": "^4.2.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
