--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "wegotrip",
   "version": "0.1.0",
   "private": true,
+  "config-overrides-path": "node_modules/react-app-rewired/config-overrides.js",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -9,8 +10,7 @@
     "@material-ui/utils": "^4.11.3",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.7",
-    "@sentry/react": "^7.34.0",
-    "@sentry/tracing": "^7.34.0",
+    "@mui/material-next": "^6.0.0-alpha.73",
     "@tailwindcss/forms": "^0.5.3",
     "@tanstack/react-query": "^4.24.4",
     "@testing-library/jest-dom": "^5.14.1",
@@ -20,14 +20,12 @@
     "@types/jquery": "^3.5.16",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
-    "@types/react-burger-menu": "^2.8.3",
     "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "^18.0.0",
     "date-fns": "^2.29.3",
-    "dayjs": "^1.11.7",
-    "moment": "^2.29.4",
     "react": "^18.2.0",
-    "react-burger-menu": "^3.0.9",
+    "react-app-rewire-styled-components": "^3.0.2",
+    "react-app-rewired": "^2.2.1",
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
@@ -35,15 +33,14 @@
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.3.2",
-    "redux": "^4.2.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
